# msc_usb_int

./: partitions.csv  sdkconfig  sdkconfig.old
components/espressif__tinyusb/src/class/hid/: hid.h
components/espressif__tinyusb/src/device/: usbd.h
components/hid/: CMakeLists.txt  OTA.c  hid_host.c
components/hid/include/: OTA.h  hid_usage_keyboard.h  myhid.h  myhid_host.h
main/: CMakeLists.txt  esp_hid_gap.c  esp_hid_gap.h  hid_host_example.c
